--- a/TeamCode/build.gradle
+++ b/TeamCode/build.gradle
@@ -12,8 +12,12 @@
 // Custom definitions may go here
 
 // Include common definitions from above.
+
+
 apply from: '../build.common.gradle'
 apply from: '../build.dependencies.gradle'
+
+
 
 android {
     namespace = 'org.firstinspires.ftc.teamcode'
@@ -23,6 +27,15 @@ android {
     }
 }
 
+repositories {
+    maven {
+        url = "https://repo.dairy.foundation/releases"
+    }
+}
+
 dependencies {
     implementation project(':FtcRobotController')
+
+
+
 }
